[gd_scene load_steps=6 format=3 uid="uid://cb087ifs8bmol"]

[ext_resource type="Theme" uid="uid://bywfpsmb67vem" path="res://scenes/theme_fonts.tres" id="1_lemnh"]
[ext_resource type="Texture2D" uid="uid://dhuxxj3hx2d3v" path="res://images_personnages/mariposa2.png" id="1_uultr"]
[ext_resource type="Script" path="res://scenes/personnage.gd" id="2_6p4gq"]
[ext_resource type="Texture2D" uid="uid://c8m4574iikju0" path="res://images_personnages/peur.png" id="3_ucij6"]
[ext_resource type="Texture2D" uid="uid://dd3dwr5v6dwsf" path="res://images_ui/dialogue2.png" id="4_133ts"]

[node name="Personnage" type="TextureRect"]
offset_right = 160.0
offset_bottom = 160.0
theme = ExtResource("1_lemnh")
texture = ExtResource("1_uultr")
script = ExtResource("2_6p4gq")

[node name="Emoji" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -76.0
offset_right = 24.0
offset_bottom = -56.0
grow_vertical = 2
texture = ExtResource("3_ucij6")

[node name="FondDialogue" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 160.0
offset_right = 640.0
offset_bottom = 250.0
texture = ExtResource("4_133ts")

[node name="MarginContainer" type="MarginContainer" parent="FondDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 2

[node name="LigneDeDialogue" type="RichTextLabel" parent="FondDialogue/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
visible_characters_behavior = 1

[connection signal="meta_clicked" from="FondDialogue/MarginContainer/LigneDeDialogue" to="." method="_on_ligne_de_dialogue_meta_clicked"]
